# online_shop_django

./: .env.sample  README.md  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_name_alter_product_category.py  0003_blog.py  0004_remove_blog_date_of_last_modification_and_more.py  0005_alter_blog_slug.py  0006_version.py  0007_product_owner.py  0008_product_is_published.py  0009_alter_product_options.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contact.html  homepage.html  position.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_verified.py  0003_user_verification_code.py
users/templates/users/: login.html  register.html  user_form.html  verification.html
users/views/: cbv.py  fbv.py
