[tool.poetry]
name = "online-shop-django"
version = "0.1.0"
description = ""
authors = ["Alex_windows <perov97@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pillow = "^10.0.1"
ipython = "^8.16.1"
pytils = "^0.4.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
